# python_template

./: README.md  init.sh  pyproject.toml  setup.cfg  tox.ini
.templates/: __init__.py
