[metadata]
name = {{NAME}}
url = https://github.com/{{GITHUB_USER}}/{{NAME}}
author = {{AUTHOR_NAME}}
author_email = {{AUTHR_EMAIL}}
description = {{DESCRIPTION}}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = {{KEYWORDS}}
platforms = linux
license_file = LICENSE.txt
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =

[options.packages.find]
exclude =
  assets
  tests

[options.package_data]
* = *.txt, *.md, *.rst

[flake8]
max-line-length = 160

[pylint]
max-line-length = 160
disable = bad-continuation,too-few-public-methods,missing-module-docstring,missing-class-docstring,missing-function-docstring
output-format = colorized
ignore-docstrings = yes
